--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="js/map-OpenLayers.js"></script>
         <script type="text/javascript" src="js/map-wmts-zurich.js"></script>
 
+        <script type="text/javascript" src="js/models.js"></script>
         <script type="text/javascript" src="js/views.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
 
