--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
             <div id="app-main">
             <div>
         <div>
+        <script type="text/javascript" src="js/config.js"></script>
         <script type="text/javascript" src="cordova-2.2.0.js"></script>
         <script type="text/javascript" src="js/modernizr.custom.15848.js"></script>
         <script type="text/javascript" src="js/zepto.min.js"></script>
