if no user details saved then ask for them when app launches

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="js/zepto.flickable.min.js"></script>
         <script type="text/javascript" src="js/lodash.min.js"></script>
         <script type="text/javascript" src="js/backbone-min.js"></script>
+        <script type="text/javascript" src="js/backbone.localStorage-min.js"></script>
         <script type="text/javascript" src="js/junior.js"></script>
 
         <script type="text/javascript" src="js/OpenLayers.2.11.zurich.js"></script>
