--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
         <script type="text/javascript" src="js/map-OpenLayers.js"></script>
         <script type="text/javascript" src="js/map-wmts-zurich.js"></script>
 
+        <script type="text/javascript" src="js/strings.js"></script>
         <script type="text/javascript" src="js/locate.js"></script>
         <script type="text/javascript" src="js/models.js"></script>
         <script type="text/javascript" src="js/views.js"></script>
