display spinner when making ajax requests

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
         <title>Hello World</title>
     </head>
     <body>
+        <div id="ajaxOverlay" class="nodisplay">
+            <img id="spinner" src="img/ajax-loader.gif">
+        </div>
         <div id="app-container">
             <div id="app-main">
             <div>
