even though it is not used change index title for sake of neatness

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/base.css" />
         <link rel="stylesheet" type="text/css" href="css/mobile.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>FixMyZürich</title>
     </head>
     <body>
         <div id="ajaxOverlay" class="nodisplay">
