--- a/www/index.html
+++ b/www/index.html
@@ -17,8 +17,13 @@
         </div>
         <div id="app-container">
             <div id="app-main">
-            <div>
-        <div>
+            </div>
+        </div>
+
+        <script type="text/javascript">
+            window.FMS = window.FMS || {};
+        </script>
+
         <script type="text/javascript" src="js/config.js"></script>
         <script type="text/javascript" src="cordova-2.2.0.js"></script>
         <script type="text/javascript" src="js/modernizr.custom.15848.js"></script>
