use cordova switching script

--- a/www/index.html
+++ b/www/index.html
@@ -33,9 +33,9 @@
         </script>
 
         <script type="text/javascript" src="js/config.js"></script>
-        <script type="text/javascript" src="cordova-2.2.0.js"></script>
         <script type="text/javascript" src="js/modernizr.custom.15848.js"></script>
         <script type="text/javascript" src="js/zepto.min.js"></script>
+        <script type="text/javascript" src="cordova-independent.js"></script>
         <script type="text/javascript" src="js/zepto.flickable.min.js"></script>
         <script type="text/javascript" src="js/lodash.min.js"></script>
         <script type="text/javascript" src="js/backbone-min.js"></script>
