--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
         <script type="text/javascript" src="js/config.js"></script>
         <script type="text/javascript" src="js/modernizr.custom.15848.js"></script>
-        <script type="text/javascript" src="js/zepto.min.js"></script>
+        <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
         <script type="text/javascript" src="cordova-independent.js"></script>
         <script type="text/javascript" src="js/zepto.flickable.min.js"></script>
         <script type="text/javascript" src="js/lodash.min.js"></script>
