nicer busy spinner

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div id="ajaxOverlay" class="nodisplay">
-            <img id="spinner" src="img/ajax-loader.gif">
+            <div class="spinner"></div>
         </div>
         <div id="app-container">
             <div id="app-main">
