--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
         <link rel="stylesheet" type="text/css" href="css/ui-lightness/jquery-ui-1.10.0.custom.min.css" />
         <link rel="stylesheet" type="text/css" href="css/ratchet.css" />
-        <link rel="stylesheet" type="text/css" href="css/junior.css" />
+        <!--<link rel="stylesheet" type="text/css" href="css/junior.css" />-->
         <link rel="stylesheet" type="text/css" href="css/base.css" />
         <link rel="stylesheet" type="text/css" href="css/mobile.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -37,6 +37,26 @@
         <script type="text/javascript" src="js/modernizr.custom.15848.js"></script>
         <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
         <script type="text/javascript" src="cordova-independent.js"></script>
+        <script type="text/javascript">
+            (function () {
+                if (navigator.userAgent.match(/Android/) && parseFloat(navigator.userAgent.slice(navigator.userAgent.indexOf("Android")+8)) < 3) {
+                    var styleElement = document.createElement("link");
+                    styleElement.href = 'css/android-2.2.css';
+                    styleElement.rel = "stylesheet";
+                    $('head').prepend(styleElement);
+                } else {
+                    var styleElement = document.createElement("link");
+                    styleElement.href = 'css/non-android-2.2.css';
+                    styleElement.rel = "stylesheet";
+                    $('head').prepend(styleElement);
+
+                    styleElement = document.createElement("link");
+                    styleElement.href = 'css/junior.css';
+                    styleElement.rel = "stylesheet";
+                    $('head').prepend(styleElement);
+                }
+            })();
+        </script>
         <script type="text/javascript" src="js/zepto.flickable.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
         <script type="text/javascript" src="js/lodash.min.js"></script>
