--- a/beta/index.html
+++ b/beta/index.html
@@ -9,6 +9,9 @@
                 font-family: "Helvetica Neue", Helvetica, sans-serif;
                 margin-bottom: 2em;
             }
+            p.warning strong {
+                color: red;
+            }
             a.app span {
                 border-radius: 13px;
                 padding: 1em;
@@ -25,18 +28,24 @@
     </head>
     <body>
         <p>
-            <a href="itms-services://?action=download-manifest&url=https://www.zueriwieneu.ch/iphone/beta/ZuriWieNeu-staging-1.2.3.1.plist" class="app">
-                <img src="https://www.zueriwieneu.ch/iphone/beta/zuriwieneu.57.png" /><br />
-                <span>Install Z&uuml;ri Wie Neu</span>
+            Install Z&uuml;ri Wie Neu:
+        </p>
+        <p>
+            <img src="https://www.zueriwieneu.ch/beta/zuriwieneu.57.png" /><br />
+            <a href="itms-services://?action=download-manifest&url=https://www.zueriwieneu.ch/beta/ios/ZuriWieNeu-staging-1.2.4.1.plist" class="app">
+                <span>iOS</span>
+            </a>
+            <a href="https://www.zueriwieneu.ch/beta/android/ZuriWieNeu-staging-1.2.4.1.apk" class="app">
+                <span>Android</span>
             </a>
         </p>
         <p>
             Note: This version of the app will submit reports to the <strong>staging version</strong> of the site, not the live version.
         </p>
-        <!-- <p>
-            Warning: This version of the app will submit reports to the <strong>live version</strong> of the site, not the staging version.
+        <!-- <p class="warning">
+            Warning: This version of the app will submit reports to the <strong>live version</strong> of the site.
         </p> -->
         <p>
-            To install via iTunes, you may <a href="https://www.zueriwieneu.ch/iphone/beta/ZuriWieNeu-staging-1.2.3.1.ipa">download the app bundle</a> directly.
+            To install via iTunes, you may <a href="https://www.zueriwieneu.ch/beta/ios/ZuriWieNeu-staging-1.2.4.1.ipa">download the app bundle</a> directly.
     </body>
 </html>
