--- a/beta/index.html
+++ b/beta/index.html
@@ -35,7 +35,7 @@
             <a href="itms-services://?action=download-manifest&url=https://www.zueriwieneu.ch/beta/ios/ZuriWieNeu-staging-1.2.7.1.plist" class="app">
                 <span>iOS</span>
             </a>
-            <a href="https://www.zueriwieneu.ch/beta/android/ZuriWieNeu-staging-1.2.7.1.apk" class="app">
+            <a href="android/ZuriWieNeu-1.3.20190829.2.apk" class="app">
                 <span>Android</span>
             </a>
         </p>
