--- a/beta/index.html
+++ b/beta/index.html
@@ -36,16 +36,16 @@
             <a href="https://testflight.apple.com/join/fQSlGWH5" class="app">
                 <span>iOS</span>
             </a>
-            <a href="android/ZuriWieNeu-1.3.20190829.2.apk" class="app">
+            <a href="android/ZuriWieNeu-1.3.1.20200521.1.apk" class="app">
                 <span>Android</span>
             </a>
         </p>
-        <p>
+        <!-- <p>
             Note: This version of the app will submit reports to the <strong><a href="https://zurich.fixmystreet.staging.mysociety.org">staging version</a></strong> of the site, not the live version.
-        </p>
-        <!-- <p class="warning">
-            Warning: This version of the app will submit reports to the <strong>live version</strong> of the site.
         </p> -->
+        <p class="warning">
+            Warning: This version of the app will submit reports to the <strong>live version</strong> of the site.
+        </p>
         <!-- <p>
             To install via iTunes, you may <a href="https://www.zueriwieneu.ch/beta/ios/ZuriWieNeu-staging-1.2.7.1.ipa">download the app bundle</a> directly.
         </p> -->
